Add separate docker-compose files for each Java version and docker run commands
- Create docker-compose-java17.yml for Java 17 full stack
- Create docker-compose-java21.yml for Java 21 full stack
- Create docker-compose-java25.yml for Java 25 full stack
- Add docker run commands after each docker build example
- Update README with comprehensive Docker deployment options
- Each compose file includes its own PostgreSQL instance
- Document how to run all versions together for comparison

Co-authored-by: klouddy <803360+klouddy@users.noreply.github.com>